# sqlite-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md
docs/: annotated.html  class_s_q_lite_1_1_conn-members.html  class_s_q_lite_1_1_conn.html  class_s_q_lite_1_1_conn_1_1_prepared_statement-members.html  class_s_q_lite_1_1_conn_1_1_prepared_statement.html  class_s_q_lite_1_1_conn_1_1_result_set-members.html  class_s_q_lite_1_1_conn_1_1_result_set.html  class_s_q_lite_1_1_database_closed-members.html  class_s_q_lite_1_1_database_closed.html  class_s_q_lite_1_1_s_q_lite_error-members.html  class_s_q_lite_1_1_s_q_lite_error.html  class_s_q_lite_1_1_statement_closed-members.html  class_s_q_lite_1_1_statement_closed.html  class_s_q_lite_1_1_value_error-members.html  class_s_q_lite_1_1_value_error.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  hierarchy.html  index.html  menudata.js  namespace_s_q_lite.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  sqlite__cpp_8cpp.html  sqlite__cpp_8h.html  sqlite__cpp_8h_source.html  struct_s_q_lite_1_1conn__base-members.html  struct_s_q_lite_1_1conn__base.html  struct_s_q_lite_1_1stmt__base-members.html  struct_s_q_lite_1_1stmt__base.html
docs/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  (+13 more)
src/: sqlite_cpp.cpp  sqlite_cpp.h
tests/: main.cpp  test_misuse.cpp
